# x-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: x-digest-config.example.json
docs/: DESIGN.md  IMPLEMENTATION.md
scripts/: .gitkeep
src/x_digest/: __init__.py  __main__.py  artifacts.py  classify.py  cli.py  config.py  digest.py  errors.py  fetch.py  images.py  logging.py  models.py  presummary.py  status.py  utils.py  watch.py
src/x_digest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/x_digest/delivery/: __init__.py  base.py  telegram.py  whatsapp.py
src/x_digest/llm/: __init__.py  base.py  gemini.py
tests/fixtures/tweets/: long_tweet.json  mixed_batch_50.json  partial_thread.json  quote_with_quoted.json  single_tweet.json  thread_5_tweets.json  with_images.json
tests/integration/: conftest.py  test_delivery_retry.py  test_fetch_to_classify.py  test_full_pipeline.py
tests/unit/: test_artifacts.py  test_classify.py  test_cli.py  test_config.py  test_crontab.py  test_delivery.py  test_digest.py  test_errors.py  test_fetch.py  test_images.py  test_llm.py  test_logging.py  test_models.py  test_presummary.py  test_scaffold.py  test_status.py  test_utils.py  test_whatsapp_cli.py
